--- a/yousef test/index.html
+++ b/yousef test/index.html
@@ -1,31 +1,94 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en-US">
 <head>
   <meta charset="utf-8">
   <title>Login</title>
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
 </head>
-<body>
-  <div id="login">
-    <form name='form-login'>
-      <span class="fontawesome-user"></span>
-      <input type="text" id="user" placeholder="Username">
-       
-      <span class="fontawesome-lock"></span>
-      <input type="password" id="pass" placeholder="Password">
-        
-      <input type="submit" value="Login">
-    </form>
-  </div>
+<body><div class="wrapper fadeInDown">
+ -->
 
-  <!-- Display user dictionary here -->
-  <div id="user-data">
-    <h2>User Dictionary</h2>
-    <ul>
-      {% for key, value in user_dictionary.items() %}
-      <li>{{ key }}: {{ value }}</li>
-      {% endfor %}
-    </ul>
-  </div>
-</body>
-</html>
+
+
+
+
+    <!DOCTYPE html>
+    <!-- Coding by CodingNepal | www.codingnepalweb.com-->
+    <html lang="en" dir="ltr">
+      <head>
+        <meta charset="UTF-8">
+        <title> Login and Registration Form in HTML & CSS | CodingLab </title>
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
+        <!-- Fontawesome CDN Link -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+       </head>
+  <body>
+    <div class="container">
+      <input type="checkbox" id="flip">
+      <div class="cover">
+        <div class="front">
+          <img src="{{ url_for('static', filename='images/frontImg.jpg') }}" alt="Descriptive text for the image">
+          <div class="text">
+            <span class="text-1">Every new friend is a <br> new adventure</span>
+            <span class="text-2">Let's get connected</span>
+          </div>
+        </div>
+        <div class="back">
+          <!--<img class="backImg" src="backImg.jpg" alt="">-->
+          <div class="text">
+            <span class="text-1">Complete miles of journey <br> with one step</span>
+            <span class="text-2">Let's get started</span>
+          </div>
+        </div>
+      </div>
+      <div class="forms">
+          <div class="form-content">
+            <div class="login-form">
+              <div class="title">Login</div>
+            <form action="#">
+              <div class="input-boxes">
+                <div class="input-box">
+                  <i class="fas fa-envelope"></i>
+                  <input type="text" placeholder="Enter your email" required>
+                </div>
+                <div class="input-box">
+                  <i class="fas fa-lock"></i>
+                  <input type="password" placeholder="Enter your password" required>
+                </div>
+                <div class="text"><a href="#">Forgot password?</a></div>
+                <div class="button input-box">
+                  <input type="submit" value="Sumbit">
+                </div>
+                <div class="text sign-up-text">Don't have an account? <label for="flip">Sign up now</label></div>
+              </div>
+          </form>
+        </div>
+          <div class="signup-form">
+            <div class="title">Signup</div>
+          <form action="#">
+              <div class="input-boxes">
+                <div class="input-box">
+                  <i class="fas fa-user"></i>
+                  <input type="text" placeholder="Enter your name" required>
+                </div>
+                <div class="input-box">
+                  <i class="fas fa-envelope"></i>
+                  <input type="text" placeholder="Enter your email" required>
+                </div>
+                <div class="input-box">
+                  <i class="fas fa-lock"></i>
+                  <input type="password" placeholder="Enter your password" required>
+                </div>
+                <div class="button input-box">
+                  <input type="submit" value="Sumbit">
+                </div>
+                <div class="text sign-up-text">Already have an account? <label for="flip">Login now</label></div>
+              </div>
+        </form>
+      </div>
+      </div>
+      </div>
+    </div>
+  </body>
+  </html>
